# rustychickpeas-ldbc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: bench-bi.md  bench-finbench.md  bench-graphalytics.md  bench-interactive.md  bench-spb.md  core-features.md  families.md  finbench-results.md
kuzu/: compare.py  finbench_import.py  finbench_queries.py  run.py  run_faithful.py  run_graphalytics.py  run_ic.py  run_spb.py  time_bi_all.py  time_bi_fair.py  time_q12_fair.py  time_queries.py
python/: README.md  bench-bi.md  bench-finbench.md  bench-graphalytics.md  bench-ic.md  bench-spb.md  columns.py  harness.py  loader.py  props.py  run_bi.py  run_finbench.py  run_graphalytics.py  run_ic.py  run_spb.py
results/: finbench-sf10.txt  ic-sf1.txt  sf1-results.txt
samples/: spb-sample.nt
scripts/: download_graphalytics.sh  download_sf1.sh  gen_finbench.sh  spb_crosscheck.py  spb_extract.sh  spb_parity.py
src/: alloc_count.rs  finbench.rs  graphalytics.rs  harness.rs  interactive.rs  lib.rs  loader.rs  main.rs  props.rs  spb.rs
tasks/: 001_extract_shared_lib.done.md  002_interactive_seeds.done.md  002_interactive_seeds.md  003_interactive_queries.done.md  003_interactive_queries.md  004_interactive_kuzu_reference.done.md  004_interactive_kuzu_reference.md  005_graphalytics_data.done.md  006_graphalytics_runner.done.md  007_finbench_datagen.done.md  007_finbench_datagen.md  008_finbench_queries.done.md  008_finbench_queries.md  009_results_and_docs.md  010_spb_rdf_loader.done.md  010_spb_rdf_loader.md  011_core_fulltext_index.done.md  011_core_fulltext_index.md  012_core_geo_index.done.md  013_spb_fts_geo_queries.md  014_spb_real_vocab_harness.done.md  015_spb_basic_q1.done.md  016_spb_basic_q2.done.md  (+227 more)
(+174 files in other folders)
