[package]
name = "rustychickpeas-ldbc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Loads real LDBC SNB BI data into rustychickpeas and times BI-style analytical queries"

[dependencies]
rustychickpeas-core = { path = "../rustychickpeas/rustychickpeas-core" }
csv = "1.3"
flate2 = "1.0"

[[bin]]
name = "ldbc-bench"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
