[package]
name = "rustychickpeas-ldbc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Loads real LDBC SNB BI data into rustychickpeas and times BI-style analytical queries"

[dependencies]
rustychickpeas-core = { path = "../rustychickpeas/rustychickpeas-core" }
csv = "1.3"
flate2 = "1.0"
hashbrown = "0.16"

[features]
# Install the counting global allocator (src/alloc_count.rs) in the bins so the
# harness can report per-query allocation counts/bytes (`--alloc`). Off by
# default so normal timing runs use the pristine system allocator.
alloc-count = []

[lib]
name = "rustychickpeas_ldbc"
path = "src/lib.rs"

[[bin]]
name = "bi"
path = "src/bin/bi.rs"

[profile.release]
opt-level = 3
lto = "thin"
